# voryn

./: .eslintrc.js  .gitignore  .prettierrc  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  Voryn_Technical_Development_Plan.docx  package.json  rust-toolchain.toml
.github/workflows/: bootstrap-docker.yml  build-android.yml  build-ios.yml  ci.yml  release.yml
apps/mobile/: App.tsx  app.json  metro.config.js  package.json  tsconfig.json
apps/mobile/android/: gradle.properties  settings.gradle
apps/mobile/android/app/: build.gradle
apps/mobile/android/app/src/main/java/com/voryn/: MainActivity.kt  MainApplication.kt
apps/mobile/android/app/src/main/res/values/: strings.xml
apps/mobile/ios/: .xcode.env  .xcode.env.local  Podfile
apps/mobile/ios/Voryn/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard  QRScannerModule.m  VorynCoreModule.m  VorynCoreModule.mm  voryn_core.h
apps/mobile/ios/Voryn.xcodeproj/: project.pbxproj
apps/mobile/ios/Voryn.xcodeproj/xcshareddata/xcschemes/: Voryn.xcscheme
apps/mobile/ios/Voryn.xcworkspace/: contents.xcworkspacedata
apps/mobile/ios/VorynRust/: voryn_core.h
apps/mobile/src/components/: MessageStatus.tsx
apps/mobile/src/hooks/: useAuth.ts  useMessages.ts  useNetwork.ts
apps/mobile/src/native/: NativeVorynCore.ts
apps/mobile/src/navigation/: RootNavigator.tsx
apps/mobile/src/screens/: AddContactScreen.tsx  ChatScreen.tsx  ContactDetailScreen.tsx  ContactsScreen.tsx  DebugScreen.tsx  OnboardingScreen.tsx  PasscodeEntryScreen.tsx  PasscodeLockScreen.tsx  PasscodeSetupPrompt.tsx  PasscodeSetupScreen.tsx  ScanQRScreen.tsx  SettingsScreen.tsx  ShareKeyScreen.tsx
apps/mobile/src/services/: NetworkService.ts  PasscodeService.ts  VorynBridge.ts
apps/mobile/src/theme/: colors.ts
apps/mobile/src/types/: index.ts
crates/voryn-bootstrap/: Cargo.toml
crates/voryn-bootstrap/src/: main.rs
crates/voryn-core/: Cargo.toml  voryn-core.udl
crates/voryn-core/src/: bridge.rs  ffi.rs  lib.rs  messaging.rs  wipe.rs
crates/voryn-core/src/auth/: attempt_limiter.rs  duress.rs  mod.rs  timelock.rs
crates/voryn-core/src/keystore/: mod.rs
crates/voryn-crypto/: Cargo.toml
crates/voryn-crypto/src/: dh.rs  encryption.rs  identity.rs  kdf.rs  keys.rs  lib.rs  passcode.rs  secure_memory.rs  signing.rs
crates/voryn-network/: Cargo.toml
crates/voryn-network/src/: config.rs  discovery.rs  lib.rs  node.rs  transport.rs
crates/voryn-network/src/obfuscation/: chaff.rs  mod.rs  padding.rs  timing.rs
crates/voryn-network/src/protocols/: mod.rs
crates/voryn-protocol/: Cargo.toml
crates/voryn-protocol/src/: exchange.rs  lib.rs  message.rs  remote_wipe.rs  safety_number.rs
crates/voryn-protocol/src/autodelete/: group_policy.rs  mod.rs  timer.rs
crates/voryn-protocol/src/double_ratchet/: chain.rs  header.rs  mod.rs  session.rs
crates/voryn-protocol/src/group/: admin.rs  events.rs  key_management.rs  ledger.rs  messaging.rs  mod.rs  permissions.rs  shamir.rs  sync.rs
crates/voryn-protocol/src/invite/: mod.rs  onboarding.rs  revocation.rs  token.rs  validation.rs
crates/voryn-protocol/src/x3dh/: mod.rs  prekeys.rs
crates/voryn-storage/: Cargo.toml
crates/voryn-storage/src/: database.rs  lib.rs  queue.rs  schema.rs
crates/voryn-storage/src/migrations/: mod.rs
crates/voryn-storage/src/models/: contact.rs  identity.rs  key_material.rs  message.rs  mod.rs
deploy/bootstrap/: Dockerfile  provision.sh  voryn-bootstrap.service
deploy/coolify/: Dockerfile.bootstrap  docker-compose.yml  seed-data.sh
deploy/coolify/nginx/: default.conf
deploy/update-server/: nginx.conf  provision.sh
docs/: architecture.md  coolify-setup-guide.md  deployment-plan.md  development-status.md  distribution.md  environment-setup.md  infrastructure-setup-guide.md
docs/security/: audit-checklist.md  threat-model.md
scripts/: build-android.sh  build-ios.sh  build-release-android.sh  build-release-ios.sh  deploy-release.sh
