[package]
name = "voryn-bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Voryn DHT bootstrap node — standalone server binary"

[[bin]]
name = "voryn-bootstrap"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# CLI args
clap = { version = "4", features = ["derive"] }

# Networking — stub for now, will use voryn-network when libp2p is enabled
