[package]
name = "voryn-network"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "P2P networking layer for Voryn — libp2p DHT, transport, discovery"

[dependencies]
libp2p.workspace = true
hickory-resolver = "0.24"
futures.workspace = true
rand.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true

[features]
dev = []
staging = []

[dev-dependencies]
proptest.workspace = true
